Updated the references

--- a/secs/n-back/refs.bib
+++ b/secs/n-back/refs.bib
@@ -587,3 +587,29 @@
   title   = {What are diesel emissions},
   year    = {2012}
 }
+
+@article{hiremath2015development,
+  title={Development of urea-scr dosing control strategies for a diesel electric hybrid car},
+  author={Hiremath, Jagdish Rajendra},
+  year={2015}
+}
+
+@mastersthesis{jain2017modeling,
+  author = {Jain, Kaushal Kamal},
+  title  = {Modeling of NH3 Storage in Vanadia-Based SCR Catalyst for Urea-Dosing Control in a Dieselelectric Hybrid Car},
+  year   = {2017}
+}
+
+@mastersthesis{jain2017modeling,
+  author = {Jain, Kaushal Kamal},
+  school = {Purdue University},
+  title  = {Modeling of NH3 Storage in Vanadia-Based SCR Catalyst for Urea-Dosing Control in a Dieselelectric Hybrid Car},
+  year   = {2017}
+}
+
+@phdthesis{jain2023model,
+  author = {Jain, Kaushal Kamal},
+  school = {Purdue University},
+  title  = {Model-based on-board diagnostics for scr-asc},
+  year   = {2023}
+}
