--- a/thesis.tex
+++ b/thesis.tex
@@ -27,15 +27,15 @@
 
 \begin{document}
 \maketitle
-\input{./secs/0-front/0-front.tex}  % Front matter (title, acknowledgements, abstract, etc)
+% \include{./secs/0-front/0-front.tex}  % Front matter (title, acknowledgements, abstract, etc)
 % ============================================================
-\input{./secs/1-intro/0-intro.tex}
-% \input{./secs/2-data/0-data.tex}
-% \input{./secs/3-governing_eqns/0-governing_eqns.tex}
-% \input{./secs/4-NOx_mdl/0-NOx_mdl.tex}
-% \input{./secs/5-sat_detect/0-sat_detect.tex}
-% \input{./secs/n-conclusion/0-conclusion.tex}
+\include{./secs/1-intro/0-intro.tex}
+% \include{./secs/2-data/0-data.tex}
+% \include{./secs/3-governing_eqns/0-governing_eqns.tex}
+% \include{./secs/4-NOx_mdl/0-NOx_mdl.tex}
+% \include{./secs/5-sat_detect/0-sat_detect.tex}
+% \include{./secs/n-conclusion/0-conclusion.tex}
 % =============================================================
 % \nocite{*}
-\input{./secs/n-back/0-end.tex}              % Back content (vita, bib settings, etc.)
+% \include{./secs/n-back/0-end.tex}              % Back content (vita, bib settings, etc.)
 \end{document}
