--- a/thesis.tex
+++ b/thesis.tex
@@ -37,5 +37,5 @@
 % \include{./secs/n-conclusion/0-conclusion.tex}
 % =============================================================
 % \nocite{*}
-% \include{./secs/n-back/0-end.tex}              % Back content (vita, bib settings, etc.)
+\include{./secs/n-back/0-end.tex}              % Back content (vita, bib settings, etc.)
 \end{document}
