added the second section of introduction with all the references.

--- a/secs/1-intro/0-intro.tex
+++ b/secs/1-intro/0-intro.tex
@@ -68,3 +68,6 @@ unavailability of ammonia sensors, the unobservability of catalyst state, and NO
 
     \item Identification of parameters sensitive to aging within the nonlinear model. Development of a parameter estimation-based detector using statistical hypothesis testing for the saturated catalyst dynamic model. Validation of detector performance using both test-cell and real-world truck data.
 \end{enumerate}
+
+% ============================================================
+\input{./secs/1-intro/subs/1-1_OBD.tex}
