added the second subsection

--- a/secs/1-intro/subs/1-1_OBD.tex
+++ b/secs/1-intro/subs/1-1_OBD.tex
@@ -41,7 +41,7 @@ Given the significant impact of On-Board Diagnostics (OBD) performance on public
                 \item The In-use Performance Ratio (IUMPR) must not be less than 0.3 for 2024 and subsequent models.
         \end{enumerate}
 
-        \item Intrusive Diagnostics: Intrusive diagnostics are allowed if they have minimal impact on tailpipe emissions or if another diagnostics algorithm has already indicated a fault.
+        \item \itbf{Intrusive Diagnostics}: Intrusive diagnostics are allowed if they have minimal impact on tailpipe emissions or if another diagnostics algorithm has already indicated a fault.
 \end{enumerate}
 
 The In-Use Performance Ratio (IUMPR) is formally defined as the ratio of the number of diagnostic algorithm activations
