Finished with introduction

--- a/secs/1-intro/0-intro.tex
+++ b/secs/1-intro/0-intro.tex
@@ -46,7 +46,7 @@ oxidizes excess ammonia at the end of the SCR bed (Figure~\ref{fig:exhaust_schem
 \begin{figure}[H]
         \centering
         \includegraphics[width=0.75\textwidth]{./figs/1-intro/SCR-ASC_model.png}
-        \caption{Schematic of the SCR-ASC system}
+        \caption{Schematic of the SCR-ASC System}
         \label{fig:exhaust_scheme}
 \end{figure}
 % ============================================================
