--- a/thesis.tex
+++ b/thesis.tex
@@ -27,7 +27,7 @@
 
 \begin{document}
 \maketitle
-% \include{./secs/0-front/0-front.tex}  % Front matter (title, acknowledgements, abstract, etc)
+\include{./secs/0-front/0-front.tex}  % Front matter (title, acknowledgements, abstract, etc)
 % ============================================================
 \include{./secs/1-intro/0-intro.tex}
 % \include{./secs/2-data/0-data.tex}
