--- a/secs/1-intro/subs/1-2_cstr.tex
+++ b/secs/1-intro/subs/1-2_cstr.tex
@@ -27,3 +27,108 @@ time, which results in impractically high sampling frequencies. Furthermore, acc
 two CSTRs to adequately capture system dynamics and causality \cite{charla2024reduced}, thereby increasing the model
 order. The remainder of the section derives the CSTR model based on the three principal reactions and examines its
 limitations.
+
+
+\subsection{Continuous Stirred Tank Reactor Model}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\textwidth]{./figs/1-intro/CSTR.png}
+    \caption{Schematic of CSTR model for SCR-ASC System}
+    \label{fig::cstr_schematic}
+\end{figure}
+
+The model development is based on specific assumptions that reflect typical operating conditions and system behavior.
+The CSTR assumption underpins the construction of the reaction flow model for SCR reactions. Drawing on reduced order
+modeling results from previous studies, including \cite{devarakonda2008adequacy} and \cite{jain2023diagnostics}, the
+number of reactions considered is reduced from the full set to three (Table~\ref{tab::react_rates}). The analysis
+focuses exclusively on the standard SCR reaction, with the assumption that all $NO_x$ in the exhaust gas is $NO$, since
+commercially available $NO_x$ sensors cannot differentiate between $NO$ and $NO_2$ (\cite{nova2014urea}). The slow SCR
+reaction is omitted, as the exhaust flow rate ensures it does not significantly affect the concentration of tailpipe
+exhaust components. Mass transfer is neglected, indicating that the catalyst's chemical kinetics are reaction controlled
+because the standard SCR reaction rate exceeds the exhaust fluid flow rate. A $100\%$ nitrogen selectivity for ammonia
+oxidation is assumed for both SCR and ASC (\cite{jain2023diagnostics}). Furthermore, the reaction rates are assumed to
+depend solely on the gas-phase concentrations of $NO_x$, $NH_3$, the adsorbed ammonia, and the available adsorption
+sites.
+
+\begin{table}[H]
+    \begin{center}
+    \caption{SCR-ASC Reactions and Rates Considerd for Model Development}
+    \label{tab::react_rates}
+    \begin{tabular}{|l|c|l|}
+        \hline
+        Reaction & Reaction Equation & Reaction Rate \\ \hline
+        % ====
+        Standard SCR &
+        $4 NH_3 ^{(ads)} + 4 NO + O_2 \longrightarrow 4 N_2 + 6 H_2O$ &
+        $r_{scr} = k_{scr} \con{NO_x}^{out} \con{NH_3}^{ads}$ \\ \hline
+        % =======
+        AMOX &
+        $4 NH_3 + 3 O_2 \longrightarrow 2 N_2 + 6 H_2O $ &
+        $r_{ox} = k_{ox} \con{NH_3}^{out}$ \\ \hline
+        % =======
+        Adsorption&
+        $NH_3 + \theta_{free} \longrightarrow NH_3(ads)$ &
+        $r_{ads} = k_{ads} \con{NH_3}^{out} \lr{\Gamma - \con{NH_3}^{ads}}$ \\ \hline
+        %=======
+        Desorption &
+        $NH_3 ^{(ads)} \longrightarrow NH_3 + \theta_{free}$ &
+        $r_{des} = k_{des} \con{NH_3}^{ads}$ \\ \hline
+    \end{tabular}
+    \end{center}
+    *$\Gamma$ is the total adsorption site concentration.
+\end{table}
+
+In continuous stirred-tank reactors (CSTRs), reaction rates are governed by outlet concentrations, as defined by
+reaction rate expressions. This relationship arises from the uniform mixing assumption at steady state: fluid with a
+specified inlet concentration enters the CSTR, undergoes complete mixing, and reacts, resulting in outlet concentrations
+that match those within the reactor (Figure~\ref{fig::cstr_schematic}). When a plug-flow reactor is modeled as a single
+CSTR, the causality of the reaction rates is reversed. Employing multiple CSTRs introduces intermediate states, which
+alleviates the impact of this causality reversal. As a result, a valid CSTR model generally contains more states than
+can be measured, making the system unobservable. This limitation is one of the two key motivations behind the discrete
+nonlinear model developed in this thesis.
+
+We have dynamics of the concentration of reactants from the mass balance for the CSTR:
+\begin{align}
+    V_{scr} \dot{\con{NO_x}}^{out} &= F_{vol} \lr{\con{NO_x}^{in}-\con{NO_x}^{out}} - V_{scr} \lr{k_{scr} \con{NO_x}^{out} \con{NH_3}^{ads}} \label{eqn::nox_mass_bal}\\
+    % ====
+    V_{scr} \dot{\con{NH_3}}^{out} &= F_{vol} \lr{\con{NH_3}^{in}-\con{NH_3}^{out}} \notag \\
+    & \quad  + V_{scr}\lr{ - k_{ads} \con{NH_3}^{out} \lr{\Gamma - \con{NH_3}^{ads}} + k_{des} \con{NH_3}^{ads}} \label{eqn::nh3_mass_bal}
+    \\
+    % ====
+    \dot{\con{NH_3}}^{ads} &= k_{ads} \con{NH_3}^{out} \lr{\Gamma - \con{NH_3}^{ads}}
+                            - k_{des} \con{NH_3}^{ads}
+                            - k_{scr} \con{NO_x}^{out} \con{NH_3}^{ads} \label{eqn::nh3_ads_mass_bal}
+\end{align}
+
+The actual input to the system is urea (AdBlue ($32.5\%$ aqueous urea solution) (\cite{nova2014urea}))
+injection that is converted to ammonia. This can be modelled by the following equation~(\ref{eqn::urea_inj}).
+
+\begin{equation}{\label{eqn::urea_inj}}
+    \dot{\con{NH_3}}^{in} = \frac{1}{\tau_{urea}} \lrf{ - \con{NH_3}^{in} +   \frac{b_{urea}}{F_{vol}}  u_{inj}}
+\end{equation}
+
+The four equations presented constitute the nonlinear state-space model for the SCR-ASC system under the single CSTR
+assumption. However, this model lacks parsimony and identifiability given the current measurement set. To obtain an
+identifiable model, the nonlinear system can be linearized, and lumped parameters for input-output equations can be
+derived based on the available measurements \cite{charla2024reduced}.
+
+Furthermore, the continuous dynamics modeled in the above equations capture the high-frequency reaction kinetics coupled
+with mass flow. The slowest process, or dominant mode, can be approximated as a first-order system with residence time
+as the time constant. For effective sampling of such a system, the sampling frequency should be n-times (atleast twice) the inverse of the residence time. Let, $\tau$ be the residence time fo the reacting flow through the SCR-ASC system, then the sampling frequency $f_s = 1/t_s$ should be:
+\begin{align}
+    f_s &\geq \frac{n}{\tau}
+    \implies t_s \leq \frac{\tau}{n} \qquad n \geq 2
+\end{align}
+Thus, the CSTR model is valid only for high sampling frequencies. If we plot the residence time on the y-axis and the
+sampling time on the x-axis, the valid region for the CSTR model lies in the shaded area of
+Figure~\ref{fig::cstr_validity}.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{./figs/1-intro/cstr_valid.png}
+    \caption{Validity Region for CSTR Model On $\tau - t_s$ Plane}
+    \label{fig::cstr_validity}
+\end{figure}
+The above analysis highlights the limitations of the CSTR model in practical applications, particularly regarding
+sampling frequency requirements. This insight further motivates the development of alternative modeling approaches that
+can accommodate lower sampling frequencies while still accurately capturing the dynamics of the SCR-ASC system.
