Done with the intro

--- a/secs/0-front/6-symbols.tex
+++ b/secs/0-front/6-symbols.tex
@@ -1,11 +1,30 @@
 % Symbols, Abbreviations, Nomenclature
 
-
 \begin{symbols}
+        $\con{\bullet}$ \ampeq  Concentration of species $\bullet$ (e.g., $[NO_x]$ is concentration of NOx)\\
+        $\mol{\bullet}$ \ampeq  Moles of species $\bullet$ (e.g., $\mol{NO_x}$ is moles of NOx)\\
+        $\Gamma$ \ampeq  Catalyst adsorption site concentration (moles of adsorption sites per unit surface area of catalyst)\\
+        $g_{sat}$ \ampeq switching function used for capturing the catalyst switching between unsaturated and saturated states\\
 \end{symbols}
 
+% =============================================================
+
 \begin{abbreviations}
+        SCR \ampeq  Selective Catalytic Reduction \\
+        ASC \ampeq  Ammonia Slip Catalyst \\
+        DOC \ampeq  Diesel Oxidation Catalyst \\
+        DPF \ampeq  Diesel Particulate Filter \\
+        FTP \ampeq  Federal Test Procedure \\
+        RMC \ampeq  Ramped Mode Cycle \\
+        EO  \ampeq  Engine Out \\
+        IUMPR \ampeq In-use Pefformance Ratio \\
 \end{abbreviations}
 
+% =============================================================
+% Names of the things I created
 \begin{nomenclature}
+        $\tau-t_s$ Plot \ampeq  Plot of Residence Time vs Sampling Time\\
+        Drive Segment   \ampeq  Segment of the truck data that is contiguous in time with no data breaks longer than a minute.\\
+        Saturated Catalyst \ampeq  A catalyst in which all adsorption sites are occupied with ammonia.\\
+        Unsaturated Catalyst \ampeq  A catalyst in which some adsorption sites are free (not occupied with ammonia).\\
 \end{nomenclature}
