--- a/secs/1-intro/subs/1-2_cstr.tex
+++ b/secs/1-intro/subs/1-2_cstr.tex
@@ -88,15 +88,28 @@ alleviates the impact of this causality reversal. As a result, a valid CSTR mode
 can be measured, making the system unobservable. This limitation is one of the two key motivations behind the discrete
 nonlinear model developed in this thesis.
 
+One additonal consideration is the saturation of adsorption sites on the catalyst surface. The total concentration of adsorption sites, denoted as $\Gamma$, is the sum of occupied and free adsorption sites. Thus, at any give time,
+\begin{align}
+    \Gamma \geq \con{NH_3}^{ads} \geq 0
+\end{align}
+Thus, the system dynamics are conditions on the saturation state of the catalyst. This phenomenon is captured in the model through the following switching function:
+\begin{align}
+    g_{sat} (\sigma) = \begin{cases}
+        \sigma & \text{if } 0 \leq \sigma \leq \Gamma \\
+        \Gamma & \text{if } \sigma > \Gamma \\
+        0 & \text{if } \sigma < 0
+    \end{cases}
+\end{align}
+
 We have dynamics of the concentration of reactants from the mass balance for the CSTR:
 \begin{align}
-    V_{scr} \dot{\con{NO_x}}^{out} &= F_{vol} \lr{\con{NO_x}^{in}-\con{NO_x}^{out}} - V_{scr} \lr{k_{scr} \con{NO_x}^{out} \con{NH_3}^{ads}} \label{eqn::nox_mass_bal}\\
+    V_{scr} \dot{\con{NO_x}}^{out} &= F_{vol} \lr{\con{NO_x}^{in}-\con{NO_x}^{out}} - V_{scr} \lr{k_{scr} \con{NO_x}^{out} g_{sat}\lr{\con{NH_3}^{ads}}} \label{eqn::nox_mass_bal}\\
     % ====
     V_{scr} \dot{\con{NH_3}}^{out} &= F_{vol} \lr{\con{NH_3}^{in}-\con{NH_3}^{out}} \notag \\
-    & \quad  + V_{scr}\lr{ - k_{ads} \con{NH_3}^{out} \lr{\Gamma - \con{NH_3}^{ads}} + k_{des} \con{NH_3}^{ads}} \label{eqn::nh3_mass_bal}
+    & \quad  + V_{scr}\lr{ - k_{ads} \con{NH_3}^{out} \lr{\Gamma - g_{sat}\lr{\con{NH_3}^{ads}}} + k_{des} \con{NH_3}^{ads}} \label{eqn::nh3_mass_bal}
     \\
     % ====
-    \dot{\con{NH_3}}^{ads} &= k_{ads} \con{NH_3}^{out} \lr{\Gamma - \con{NH_3}^{ads}}
+    \dot{\con{NH_3}}^{ads} &= k_{ads} \con{NH_3}^{out} \lr{\Gamma - g_{sat}\lr{\con{NH_3}^{ads}}}
                             - k_{des} \con{NH_3}^{ads}
                             - k_{scr} \con{NO_x}^{out} \con{NH_3}^{ads} \label{eqn::nh3_ads_mass_bal}
 \end{align}
@@ -113,7 +126,7 @@ assumption. However, this model lacks parsimony and identifiability given the cu
 identifiable model, the nonlinear system can be linearized, and lumped parameters for input-output equations can be
 derived based on the available measurements \cite{charla2024reduced}.
 
-Furthermore, the continuous dynamics modeled in the above equations capture the high-frequency reaction kinetics coupled
+Furthermore, the hybrid dynamics modeled in the above equations capture the high-frequency reaction kinetics coupled
 with mass flow. The slowest process, or dominant mode, can be approximated as a first-order system with residence time
 as the time constant. For effective sampling of such a system, the sampling frequency should be n-times (atleast twice) the inverse of the residence time. Let, $\tau$ be the residence time fo the reacting flow through the SCR-ASC system, then the sampling frequency $f_s = 1/t_s$ should be:
 \begin{align}
