done with intro

--- a/secs/0-front/6-symbols.tex
+++ b/secs/0-front/6-symbols.tex
@@ -3,8 +3,8 @@
 \begin{symbols}
         $\con{\bullet}$ \ampeq  Concentration of species $\bullet$ (e.g., $[NO_x]$ is concentration of NOx)\\
         $\mol{\bullet}$ \ampeq  Moles of species $\bullet$ (e.g., $\mol{NO_x}$ is moles of NOx)\\
-        $\Gamma$ \ampeq  Catalyst adsorption site concentration (moles of adsorption sites per unit surface area of catalyst)\\
-        $g_{sat}$ \ampeq switching function used for capturing the catalyst switching between unsaturated and saturated states\\
+        $\Gamma$ \ampeq  Catalyst adsorption site concentration $(moles/m^2)$\\
+        $g_{sat}$ \ampeq Switching function used for capturing the catalyst saturation state switching \\
 \end{symbols}
 
 % =============================================================
@@ -23,8 +23,8 @@
 % =============================================================
 % Names of the things I created
 \begin{nomenclature}
-        $\tau-t_s$ Plot \ampeq  Plot of Residence Time vs Sampling Time\\
-        Drive Segment   \ampeq  Segment of the truck data that is contiguous in time with no data breaks longer than a minute.\\
+        $\tau-t_s$ Plot \ampeq  Plot of Residence Time vs Sampling Time.\\
+        Drive Segment   \ampeq  Segment of the truck data that is contiguous in time.\\
         Saturated Catalyst \ampeq  A catalyst in which all adsorption sites are occupied with ammonia.\\
-        Unsaturated Catalyst \ampeq  A catalyst in which some adsorption sites are free (not occupied with ammonia).\\
+        Unsaturated Catalyst \ampeq  A catalyst in which some adsorption sites are free.\\
 \end{nomenclature}
