added the test cell variabels stuff

--- a/secs/0-front/6-symbols.tex
+++ b/secs/0-front/6-symbols.tex
@@ -14,10 +14,15 @@
         ASC \ampeq  Ammonia Slip Catalyst \\
         DOC \ampeq  Diesel Oxidation Catalyst \\
         DPF \ampeq  Diesel Particulate Filter \\
+        DEF \ampeq  Diesel Exhaust Fluid \\
         FTP \ampeq  Federal Test Procedure \\
         RMC \ampeq  Ramped Mode Cycle \\
         EO  \ampeq  Engine Out \\
         IUMPR \ampeq In-use Pefformance Ratio \\
+        EUL \ampeq  End of Useful Life \\
+        OBD \ampeq  On-board Diagnostics \\
+        DG \ampeq  De-greened \\
+        adt, trw, wer, mes \ampeq  Different truck IDs used in the experimental data sets \\
 \end{abbreviations}
 
 % =============================================================
