Done with the first subsection of data characteristics

--- a/secs/2-data/0-subs/0-1_test_cell_data.tex
+++ b/secs/2-data/0-subs/0-1_test_cell_data.tex
@@ -87,4 +87,5 @@ The main distinction among these three cycles is the operating temperature durin
 \end{tabular}
 \end{table}
 % =====
-A key advantage of test-cell data is the inclusion of FTIR (Fourier Transform Infrared Spectroscopy) sensor measurements, which can estimate both NOx and NH3 gas concentrations. In contrast, the commercial NOx sensor is cross-sensitive to ammonia, whereas FTIR measurements do not exhibit this limitation. The sensor sampling frequency for the test-cell data is 5 Hz (ts = 0.2 s).
+
+A key advantage of test-cell data is the inclusion of FTIR (Fourier Transform Infrared Spectroscopy) sensor measurements, which can estimate both NOx and NH3 gas concentrations. In contrast, the commercial NOx sensor is cross-sensitive to ammonia, whereas FTIR measurements do not exhibit this limitation. The sensor sampling frequency for the test-cell data is 5 Hz $(t_s = 0.2 s)$.
