added the residence time

--- a/secs/0-front/6-symbols.tex
+++ b/secs/0-front/6-symbols.tex
@@ -5,6 +5,14 @@
         $\mol{\bullet}$ \ampeq  Moles of species $\bullet$ (e.g., $\mol{NO_x}$ is moles of NOx)\\
         $\Gamma$ \ampeq  Catalyst adsorption site concentration $(moles/m^2)$\\
         $g_{sat}$ \ampeq Switching function used for capturing the catalyst saturation state switching \\
+        $V_{scr}$ \ampeq  Volume of the SCR-ASC catalyst chamber $(m^3)$\\
+        $A_{scr}$ \ampeq  Surface area of the SCR catalyst coating $(m^2)$\\
+        $\rho$ \ampeq  Density of the exhaust gas $g/ml$\\
+        $T$ \ampeq  Temperature of the exhaust gas $^oC$\\
+        $F$ \ampeq  Mass flow rate of the exhaust gas $g/s$\\
+        $u_{inj}$ \ampeq  Urea injection rate $ml/s$\\
+        $\tau$ \ampeq  Residence time of the exhaust gas in the SCR-ASC chamber $s$\\
+        $t_s$ \ampeq  Sampling time of the data $s$\\
 \end{symbols}
 
 % =============================================================
