--- a/secs/2-data/0-data.tex
+++ b/secs/2-data/0-data.tex
@@ -5,7 +5,16 @@ A critical criterion for assessing the validity of a developed model or diagnost
 %===============================================================================
 \input{./secs/2-data/0-subs/0-2_truck_data.tex}
 % ===============================================================================
+\input{./secs/2-data/1-res_time.tex}
+%==============================================================================
 
+
+
+\section{Data Units}
+
+\section{$NO_x$ Sensor Crosssensitivity}
+
+\section{Data Preprocessing in Test-Cell and Truck Data}
 
 
 The available test and truck data for testing the model structure needs to be put into common units. The following table
