--- a/secs/n-back/refs.bib
+++ b/secs/n-back/refs.bib
@@ -580,3 +580,15 @@
   title  = {Model-based on-board diagnostics for scr-asc},
   year   = {2023}
 }
+
+
+@article{nauman2008residence,
+  author    = {Nauman, E Bruce},
+  journal   = {Industrial \& Engineering Chemistry Research},
+  number    = {10},
+  pages     = {3752--3766},
+  publisher = {ACS Publications},
+  title     = {Residence time theory},
+  volume    = {47},
+  year      = {2008}
+}
