--- a/secs/2-data/1-res_time.tex
+++ b/secs/2-data/1-res_time.tex
@@ -1,9 +1,16 @@
 \section{Residence Time}
-A significant challenge posed by low sampling rates is their impact on the residence time of the reacting flow. Residence time is defined as the total duration a fluid parcel remains within a control volume, such as the SCR-ASC chamber. For a group of parcels, the frequency distribution of their residence times, known as the residence time distribution (RTD), characterizes this parameter. In both truck and test-cell datasets, the mode of the residence time distribution serves as a more appropriate measure of central tendency due to substantial variations in flow rate. The residence time ($\tau_{mode}$) can be approximated by the formula:
+A significant challenge posed by low sampling rates is their impact on the residence time of the reacting flow.
+Residence time is defined as the total duration a fluid parcel remains within a control volume, such as the SCR-ASC
+chamber. For a group of parcels, the frequency distribution of their residence times, known as the residence time
+distribution (RTD), characterizes this parameter. In both truck and test-cell datasets, the mode of the residence time
+distribution serves as a more appropriate measure of central tendency due to substantial variations in flow rate. The
+residence time ($\tau_{mode}$) can be approximated by the formula:
 \begin{align}
         \tau_{mode} = \frac{\rho V_{scr}}{F_{mode}}
 \end{align}
-Where, $\rho$ is the density of the exhaust gas, $V_{scr}$ is the volume of the SCR-ASC chamber, and $F_{mode}$ is the mode of the mass flow rate of the exhaust gas. We have the dimensions of the SCR-ASC chamber tabulated in Table~\ref{tab::scr_asc_dimensions} \cite{jain2023model}.
+Where, $\rho$ is the density of the exhaust gas, $V_{scr}$ is the volume of the SCR-ASC chamber, and $F_{mode}$ is the
+mode of the mass flow rate of the exhaust gas. We have the dimensions of the SCR-ASC chamber tabulated in
+Table~\ref{tab::scr_asc_dimensions} \cite{jain2023model}.
 \begin{table}[!ht]
     \centering
     \caption{SCR-ASC Chamber Dimensions}
@@ -19,13 +26,23 @@ Where, $\rho$ is the density of the exhaust gas, $V_{scr}$ is the volume of the 
         \hline \hline
     \end{tabular}
 \end{table}
-An additional approximation assumes constant exhaust gas density across the dataset to estimate residence time. The purpose of this analysis is to demonstrate that the mode residence time is substantially lower than the sampling interval, despite computational inaccuracies.
+An additional approximation assumes constant exhaust gas density across the dataset to estimate residence time. The
+purpose of this analysis is to demonstrate that the mode residence time is substantially lower than the sampling
+interval, despite computational inaccuracies.
 \begin{align}
         \rho \approx 1.2 e-3 \, g/cm^3 \quad \text{at} \quad 250 \lx{^o}{C} \\
         \tau^{test}_{mode} = 0.072 \,s \qquad
         \tau^{truck}_{mode} = 0.071 \,s
 \end{align}
-The similarity in the mode of residence time for both truck and test-cell datasets indicates comparable flow rate characteristics. The residence time is much shorter than the sensor sampling intervals. Calculations show that the mode of residence time is approximately $0.07 \, s$, which is less than half the sampling interval for the test-cell data (0.2 s) and less than one-tenth of the truck data sampling interval ($t_s = 1 \,s$). As a result, measurement signals for gas concentrations fail to capture reaction transients that occur on time scales shorter than the mean residence time. This limitation is evident in the $\tau-t_s$ plot (Figure~\ref{fig::tau_ts_res}), where the residence time modes from the data and the validity regions for the CSTR model do not coincide. Therefore, it is necessary to develop an "averaged" nonlinear ARMAX model that represents system dynamics at the sampling interval and accounts for the integrating or memory effects of catalyst storage at the end of each residence time within the sample.
+The similarity in the mode of residence time for both truck and test-cell datasets indicates comparable flow rate
+characteristics. The residence time is much shorter than the sensor sampling intervals. Calculations show that the mode
+of residence time is approximately $0.07 \, s$, which is less than half the sampling interval for the test-cell data
+(0.2 s) and less than one-tenth of the truck data sampling interval ($t_s = 1 \,s$). As a result, measurement signals
+for gas concentrations fail to capture reaction transients that occur on time scales shorter than the mean residence
+time. This limitation is evident in the $\tau-t_s$ plot (Figure~\ref{fig::tau_ts_res}), where the residence time modes
+from the data and the validity regions for the CSTR model do not coincide. Therefore, it is necessary to develop an
+"averaged" nonlinear ARMAX model that represents system dynamics at the sampling interval and accounts for the
+integrating or memory effects of catalyst storage at the end of each residence time within the sample.
 \begin{figure}[!ht]
         \centering
         \includegraphics[width=0.8\textwidth]{./figs/2-data/res_times.png}
