added the data units section too

--- a/secs/2-data/0-data.tex
+++ b/secs/2-data/0-data.tex
@@ -7,33 +7,16 @@ A critical criterion for assessing the validity of a developed model or diagnost
 % ===============================================================================
 \input{./secs/2-data/1-res_time.tex}
 %==============================================================================
+\input{./secs/2-data/2-data_units.tex}
+% =============================================================================
 
 
 
-\section{Data Units}
 
 \section{$NO_x$ Sensor Crosssensitivity}
 
 \section{Data Preprocessing in Test-Cell and Truck Data}
 
-
-The available test and truck data for testing the model structure needs to be put into common units. The following table
-lists the units used for each of the physical properties.
-\begin{table}[H]
-   \centering
-   \begin{tabular}{l l}
-       \hline \hline
-        \itbf{Property} & \itbf{Unit}\\
-        \hline \hline
-        Concentration   & $ 10^{-3} \, mol/m^{3}$ \\
-        Temperature     & $ \times 10 + 200\lx{^o}{C}$ \\
-        Flow Rate   & $\times 10 \, g/s$ \\
-        Urea Injection  & $\times 10^{-1}\, ml/s$ \\
-        Time            & $s$ \\
-        \hline \hline
-   \end{tabular}
-   \caption{Table of Units used in the Model}
-\end{table}
 
 The available data and corresponding units are listed in the following table.
 
