--- a/secs/2-data/0-data.tex
+++ b/secs/2-data/0-data.tex
@@ -11,41 +11,5 @@ A critical criterion for assessing the validity of a developed model or diagnost
 % =============================================================================
 \input{./secs/2-data/3-cross.tex}
 % =============================================================================
-
-
-
-
-
-\section{Data Preprocessing in Test-Cell and Truck Data}
-
-
-
-\section{Test-Cell Data Preprocessing}
-% \input{./secs/2-data/tst_filt/sig_ranges.tex}
-
-%==============================================================================
-
-% \subsection{Signal Processing Steps}
-\input{./secs/2-data/pipeline.tex}
-
-% ==============================================================================
-
-\section{Truck Data Preprocessing}
-% \input{./secs/2-data/trk_filt/sig_ranges.tex}
-
+\input{./secs/2-data/4-data_preproc.tex}
 % =============================================================================
-
-% \subsection{Signal Processing Steps}
-The road data was collected from trucks operating in the United States  for two days separated by a few years
-(Table~\ref{tab::truck_data_summary}) during which the catalyst has aged based on the existing performance measures. The
-data contains measurements of $NO_x$ sensors before and after the catalyst, as well as other required variables
-including flow rate, temperature and urea injection rate. The data preporcessing includes,
-\begin{enumerate}
-        \item removing the rows with missing values,
-        \item removing the rows whose operating temperature range is beyond range of $200-300 \,^0C$,
-        \item interpolating the missing data if the data breaks are smaller than a minute, and finally,
-        \item smooting the data using non-causal chebyshev filter.
-\end{enumerate}
-The preprocessed data is than partitioned into drive segments with no breaks which correspond to a continuous driving
-period from engine start to engine stop.
-%===
